[gd_scene load_steps=10 format=2]

[ext_resource path="res://graphics/logo.png" type="Texture" id=1]
[ext_resource path="res://buttons/NewGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://buttons/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://buttons/HowToPlayButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menus/title_screen.gd" type="Script" id=6]
[ext_resource path="res://fonts/back_to_school_24.tres" type="DynamicFont" id=8]
[ext_resource path="res://Menus/code_input.gd" type="Script" id=10]

[sub_resource type="GDScript" id=1]
script/source = "extends Button

export(String) var scene_to_load
"

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 160.0
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CentreRow" type="HBoxContainer" parent="Menu"]
margin_top = 164.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3
alignment = 1

[node name="LeftColumn" type="VBoxContainer" parent="Menu/CentreRow"]
margin_right = 518.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="CodeInput" type="LineEdit" parent="Menu/CentreRow/LeftColumn"]
margin_top = 48.0
margin_right = 518.0
margin_bottom = 128.0
rect_min_size = Vector2( 300, 80 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 8 )
align = 1
max_length = 4
placeholder_text = "ENTER CODE HERE..."
placeholder_alpha = 0.5
script = ExtResource( 10 )

[node name="PlayBar" type="HBoxContainer" parent="Menu/CentreRow/LeftColumn"]
margin_top = 228.0
margin_right = 518.0
margin_bottom = 348.0

[node name="HowToPlayButton" parent="Menu/CentreRow/LeftColumn/PlayBar" instance=ExtResource( 4 )]
margin_right = 518.0
margin_bottom = 120.0
size_flags_horizontal = 3
script = SubResource( 1 )
scene_to_load = "res://Menus/HowToPlay.tscn"

[node name="RightColumn" type="VBoxContainer" parent="Menu/CentreRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 67
alignment = 1

[node name="NewGameBox" type="HBoxContainer" parent="Menu/CentreRow/RightColumn"]
margin_top = 44.0
margin_right = 518.0
margin_bottom = 164.0

[node name="NewGameButton" parent="Menu/CentreRow/RightColumn/NewGameBox" instance=ExtResource( 2 )]
margin_right = 360.0
margin_bottom = 120.0

[node name="ExitBox" type="HBoxContainer" parent="Menu/CentreRow/RightColumn"]
margin_top = 231.0
margin_right = 518.0
margin_bottom = 351.0

[node name="ExitButton" parent="Menu/CentreRow/RightColumn/ExitBox" instance=ExtResource( 3 )]
margin_right = 360.0
margin_bottom = 120.0
script = SubResource( 1 )

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="Menu/CentreRow/RightColumn/ExitBox/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
